# dicectf-2023-challenges

./: README.md
crypto/bbbb/: Dockerfile  challenge.yml  solve.py  solve2.sage
crypto/he-matrix-inverse/: .gitignore  Dockerfile  challenge.yaml  flag.txt  sec.key  sol.ctxt  submit.py
crypto/membrane/: challenge.yaml  flag.txt  solve.sage
crypto/provably-secure/: Dockerfile  challenge.yaml  flag.txt  solve.py
crypto/provably-secure-2/: challenge.yaml  flag.txt
crypto/rsabin/: Dockerfile  challenge.yaml  flag.txt  ireland_PKCS1OAEP.py  nth_root.py  solve_OAEP.py
crypto/seaside/: Dockerfile  challenge.yaml  flag.txt
crypto/vinaigrette/: Dockerfile  challenge.yaml  flag.txt
misc/geminiblog/: SOLUTION.md  challenge.yml  make_handout.sh
misc/insecure-shell/: challenge.yaml  patch  ssh
misc/mlog/: challenge.yaml  make-handout.sh  sol.txt
misc/mlog/chall/: Dockerfile  hook.sh  pyproject.toml  run
misc/mlog/chall/mlog/: __main__.py  driver.py  predict.py
misc/pike/: README.md  challenge.yml  solve.py
misc/prison-reform/: challenge.yaml  solve.py
misc/survey/: challenge.yaml
misc/welcome/: challenge.yaml
pwn/baby-solana/: baby-solana.tar  challenge.yaml
pwn/bop/: challenge.yaml
pwn/chessrs/: adminbot.js  challenge.yml  flag.txt  make_handout.sh
pwn/dicer-visor/: challenge.yml
pwn/disc-pwn/: challenge.yml
pwn/otterworld/: challenge.yaml  otterworld.tar
pwn/sice-supervisor/: Dockerfile  challenge.yaml  exploit.py  flag.txt
pwn/term-zelda/: Dockerfile  challenge.yml
rev/disc-rev/: challenge.yml  flag.txt
rev/macroscopic/: solve.py  (+1 more)
(+148 files in other folders)
